WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281871
Don't crash when UTF-8 conversion of filename fails
https://bugs.webkit.org/show_bug.cgi?id=281871
Summary
Don't crash when UTF-8 conversion of filename fails
daniel_liu4
Reported
2024-10-21 13:31:22 PDT
Currently, `fetchScriptFromLocalFileSystem` expects UTF-8 conversion to work, and will trip a RELEASE_ASSERT when this fails. Let's clean this path up so that it fails gracefully.
rdar://138178550
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2024-10-21 13:33:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35538
EWS
Comment 2
2024-10-25 17:12:27 PDT
Committed
285721@main
(a46b2777b0cb): <
https://commits.webkit.org/285721@main
> Reviewed commits have been landed. Closing PR #35538 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug