Don't crash when UTF-8 conversion of filename in `fetchScriptFromLocalFileSystem` fails https://bugs.webkit.org/show_bug.cgi?id=281871 rdar://138178550

Reviewed by Yijia Huang.

Previously, `fetchScriptFromLocalFileSystem` assumed that UTF-8 conversion of the filename
would always succeed, and had a `RELEASE_ASSERT` asserting such. However, if this conversion
fails for any reason, we'll trip the assertion. This patch cleans up this case by having the
program fail gracefully.

* Source/JavaScriptCore/jsc.cpp:
(fillBufferWithContentsOfFile):

Canonical link: https://commits.webkit.org/285721@main